create products page general layout

--- a/e-comm-client/src/assets/lang/en.json
+++ b/e-comm-client/src/assets/lang/en.json
@@ -20,5 +20,8 @@
             "aria-label": "Language selector",
             "label": "Choose language"
         }
+    },
+    "products-page": {
+        "heading": "CPUs"
     }
 }
