--- a/e-comm-client/src/assets/lang/uk.json
+++ b/e-comm-client/src/assets/lang/uk.json
@@ -20,5 +20,8 @@
             "aria-label": "Селектор мови",
             "label": "Оберіть мову"
         }
+    },
+    "products-page": {
+        "heading": "Процесори"
     }
 }
