create visual design for product card

--- a/e-comm-client/src/assets/lang/en.json
+++ b/e-comm-client/src/assets/lang/en.json
@@ -22,6 +22,10 @@
         }
     },
     "products-page": {
-        "heading": "CPUs"
+        "heading": "CPUs",
+        "product_card": {
+            "sku": "SKU",
+            "availability-label": "Available: "
+        }
     }
 }
