--- a/e-comm-client/src/assets/lang/uk.json
+++ b/e-comm-client/src/assets/lang/uk.json
@@ -18,7 +18,8 @@
         },
         "language-selector": {
             "aria-label": "Селектор мови",
-            "label": "Оберіть мову"
+            "label": "Оберіть мову",
+            "sr-text": "Оберіть мову"
         }
     },
     "products-page": {
