add missing labels

--- a/e-comm-client/src/assets/lang/en.json
+++ b/e-comm-client/src/assets/lang/en.json
@@ -77,6 +77,8 @@
         },
         "available": "Available",
         "total": "Total",
-        "add-to-cart": "Add to cart"
+        "add-to-cart": "Add to cart",
+        "no": "No",
+        "yes": "Yes"
     }
 }
