--- a/e-comm-client/src/assets/lang/uk.json
+++ b/e-comm-client/src/assets/lang/uk.json
@@ -77,6 +77,8 @@
         },
         "available": "В наявносі",
         "total": "Всього",
-        "add-to-cart": "Додати до кошика"
+        "add-to-cart": "Додати до кошика",
+        "no": "Ні",
+        "yes": "Так"
     }
 }
