--- a/e-comm-client/src/assets/lang/uk.json
+++ b/e-comm-client/src/assets/lang/uk.json
@@ -80,5 +80,12 @@
         "add-to-cart": "Додати до кошика",
         "no": "Ні",
         "yes": "Так"
+    },
+    "cart-modal": {
+        "shopping-cart": "Кошик товарів",
+        "loading": "Завантажуємо товари...",
+        "cart-empty": "Ваш кошик порожній",
+        "total": "Всього",
+        "checkout": "Оформити замовлення"   
     }
 }
