localize payment page

--- a/e-comm-client/src/assets/lang/en.json
+++ b/e-comm-client/src/assets/lang/en.json
@@ -87,5 +87,9 @@
         "cart-empty": "Your cart is empty",
         "total": "Total",
         "checkout": "Checkout"   
+    },
+    "payment-page": {
+        "processing": "Processing...",
+        "pay": "Pay now"
     }
 }
