--- a/e-comm-client/src/assets/lang/uk.json
+++ b/e-comm-client/src/assets/lang/uk.json
@@ -87,5 +87,9 @@
         "cart-empty": "Ваш кошик порожній",
         "total": "Всього",
         "checkout": "Оформити замовлення"   
+    },
+    "payment-page": {
+        "processing": "Обробка замовлення...",
+        "pay": "Оплатити"
     }
 }
