fix wrong error placement in structure

--- a/e-comm-client/src/assets/lang/en.json
+++ b/e-comm-client/src/assets/lang/en.json
@@ -99,16 +99,16 @@
         "address": "Address",
         "city": "City",
         "zip": "ZIP/postal code (5 digits)",
-        "country": "Country" 
-    },
-    "errors": {
-        "required-fname": "Enter your first name",
-        "required-lname": "Enter your last name",
-        "required-email": "Enter your email",
-        "invalid-email": "Incorrect email format",
-        "required-address": "Enter your address",
-        "required-city": "Enter your city",
-        "required-zip": "Enter your ZIP (postal) code",
-        "required-country": "Select country"
+        "country": "Country",
+        "errors": {
+            "required-fname": "Enter your first name",
+            "required-lname": "Enter your last name",
+            "required-email": "Enter your email",
+            "invalid-email": "Incorrect email format",
+            "required-address": "Enter your address",
+            "required-city": "Enter your city",
+            "required-zip": "Enter your ZIP (postal) code",
+            "required-country": "Select country"
+        }
     }
 }
