--- a/e-comm-client/src/assets/lang/uk.json
+++ b/e-comm-client/src/assets/lang/uk.json
@@ -99,16 +99,16 @@
         "address": "Адреса",
         "city": "Назва міста",
         "zip": "ZIP/поштовий код (5 цифр)",
-        "country": "Країна"
-    },
-    "errors": {
-        "required-fname": "Вкажіть ваше ім'я",
-        "required-lname": "Вкажіть ваше прізвище",
-        "required-email": "Вкажіть ваш email",
-        "invalid-email": "Неправильно введений email",
-        "required-address": "Введіть вашу фізичну адресу",
-        "required-city": "Введіть назву вашого міста",
-        "required-zip": "Введіть ZIP (поштовий) код вашої адреси",
-        "required-country": "Оберіть вашу країну"
+        "country": "Країна",
+        "errors": {
+            "required-fname": "Enter your first name",
+            "required-lname": "Enter your last name",
+            "required-email": "Enter your email",
+            "invalid-email": "Incorrect email format",
+            "required-address": "Enter your address",
+            "required-city": "Enter your city",
+            "required-zip": "Enter your ZIP (postal) code",
+            "required-country": "Select country"
+        }
     }
 }
